# langcode

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/langcode/: __init__.py  __main__.py
src/langcode/agents/: __init__.py  context.py  memory.py  patch.py  prompt.py  runner.py  state.py  subagent.py
src/langcode/agents/built-in/: Explore.md  Plan.md  general-purpose.md
src/langcode/commands/: __init__.py  custom.py  handler.py  scaffold.py
src/langcode/core/: __init__.py  config.py  utils.py
src/langcode/hooks/: __init__.py  engine.py  middleware.py  models.py  parser.py
src/langcode/mcp/: __init__.py  config.py  manager.py
src/langcode/plugins/: __init__.py  lifecycle.py  loader.py  marketplace.py  models.py
src/langcode/skills/: __init__.py  loader.py
src/langcode/tools/: __init__.py  ask.py  bash.py  edit.py  glob.py  grep.py  plan_mode.py  read.py  task.py  todo.py  web_fetch.py  web_search.py  write.py
src/langcode/tui/: __init__.py  completers.py  plugin_ui.py  prompt_builders.py  references.py  renderer.py  repl.py  session_picker.py
tests/: test_agent_hooks.py  test_commands.py  test_config.py  test_hooks.py  test_hooks_integration.py  test_lifecycle_hooks.py  test_mcp.py  test_middleware.py  test_prompt.py  test_references.py  test_showcase_integration.py  test_skills.py  test_tools.py  test_tui_completers.py  test_tui_prompt_builders.py  test_tui_renderer.py  test_tui_repl.py  test_tui_session_picker.py  test_utils.py
